# flatmap-server

./: .gitignore  .gitmodules  .readthedocs.yaml  Pipfile  README.rst  flatmaps.wsgi  make_map.sh  pyproject.toml  release.sh  requirements.txt  server.py
connectivity/: LICENSE  README.rst  index.html  index.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
connectivity/src/: graph.ts  index.ts
docs/: .gitignore  Competency.rst  Knowledge.rst  Maker.rst  Readme.rst  Server.rst  Tools.rst  Viewer.rst  WebAPI.rst  compency.rst  competency.rst  conf.py  index.rst  requirements.txt
docs/spec/: openapi.yaml
mapserver/: __init__.py  __main__.py  annotation.py  annotator.py  github.py  knowledgestore.py  main.py  maker.py  pennsieve.py  server.py  settings.py  utils.py
mapserver/competency/: __init__.py  definition.py  flatmap.py  knowledge.py  manager.py
mapserver/competency/data/: queries.json  queries.yaml
mapserver/competency/queries.d/: query_1.yaml  query_10.yaml  query_11.yaml  query_12.yaml  query_13.yaml  query_14.yaml  query_15.yaml  query_16.yaml  query_17.yaml  query_18.yaml  query_19.yaml  query_2.yaml  query_20.yaml  query_21.yaml  query_22.yaml  query_23.yaml  query_24.yaml  query_25.yaml  query_26.yaml  query_27.yaml  query_28.yaml  query_29.yaml  query_3.yaml  query_30.yaml  query_4.yaml  query_5.yaml  query_6.yaml  query_7.yaml  query_8.yaml  query_9.yaml
mapserver/knowledge/: __init__.py  hierarchy.py  rdf_utils.py
mapserver/maker/: __init__.py
mapserver/openapi/: __init__.py
mapserver/server/: __init__.py  annotator.py  competency.py  connectivity.py  dashboard.py  flatmap.py  knowledge.py  maker.py  utils.py  viewer.py
ontology/: uberon.py
src/: __init__.py  __main__.py  generator.py  knowledgebase.py  knowledgestore.py  maker.py  mbtiles.py  namespaces.py  options.py  server.py  settings.py
src/knowledgebase/: __init__.py
tests/: test_cq.py  test_query_1.py  test_query_10.py  test_query_11.py  test_query_12.py  test_query_13.py  test_query_14.py  test_query_15.py  test_query_16.py  test_query_17.py  test_query_18.py  test_query_19.py  test_query_2.py  test_query_20.py  test_query_21.py  test_query_22.py  test_query_23.py  test_query_24.py  test_query_25.py  test_query_26.py  test_query_27.py  test_query_28.py  test_query_29.py  test_query_3.py  test_query_30.py  test_query_4.py  test_query_5.py  test_query_6.py  test_query_7.py  test_query_8.py  test_query_9.py  utility.py
tools/: add_body.py  add_orcid.py  archive_maps.py  archiver.py  clean_connectivity.sql  competency_query.py  copy_logs.py  item_details.py  latest_maps_by_taxon.py  load_labels.py  pg_import.py  pmr_knowledge.py  portal_maps.py  promote.py  purge_unknown_flatmaps.py  pyproject.toml  sckan_connectivity.py
tools/competency-query/: competency_query.py  pyproject.toml
tools/utils/: help.py
