[project]
name = "mapserver"
version = "1.2.0"
description = "An server for anatomical flatmaps."
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
readme = "README.rst"
requires-python = ">=3.12,<3.13"
dependencies = [
    "landez>=2.5.0",
    "Pillow>=11.2.0",
    "requests>=2.31.0",
    "rdflib>=7.0.0",
    "setuptools>=78.1.0",
    "litestar>=2.15.2",
    "uvloop>=0.21.0",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "pyyaml>=6.0.2",
    "asyncpg>=0.30.0",
    "flatmapknowledge @ https://github.com/AnatomicMaps/flatmap-knowledge/releases/download/v2.4.2/flatmapknowledge-2.4.2-py3-none-any.whl",
    "mapknowledge @ https://github.com/AnatomicMaps/map-knowledge/releases/download/v1.2.2/mapknowledge-1.2.2-py3-none-any.whl",
    "mapmaker @ https://github.com/AnatomicMaps/flatmap-maker/releases/download/v1.19.2/mapmaker-1.19.2-py3-none-any.whl",
    "granian>=2.2.5",
]

[dependency-groups]
dev = [
    "sphinx<=8.1",
    "sphinx-rtd-theme<=3.0.1",
    "sphinxcontrib-httpdomain",
    "pytest>=8.4.0",
    "rich>=13.9.4",
]

[project.scripts]
mapserver = 'mapserver.__main__:mapserver'
mapviewer = 'mapserver.__main__:mapviewer'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.uv.workspace]
members = [
    "tools/competency-query",
]
